[gd_scene format=4 uid="uid://dwuueukg6vtee"]

[ext_resource type="Script" uid="uid://cvqqmq04h5mxq" path="res://Scripts/level_starter.gd" id="1_0jhw5"]
[ext_resource type="TileSet" uid="uid://dv2ek4xnnct6f" path="res://Assets/Resources/ground_tileset.tres" id="2_eqosv"]
[ext_resource type="PackedScene" uid="uid://bojvjttovmt8" path="res://Scenes/wind_controller.tscn" id="3_6a7cf"]
[ext_resource type="Script" uid="uid://dvpqim5omfji7" path="res://Scripts/navigation_region_2d.gd" id="4_hpjhc"]
[ext_resource type="TileSet" uid="uid://b8bqcouefk1rw" path="res://Assets/Resources/wall_tileset.tres" id="5_56d2c"]
[ext_resource type="PackedScene" uid="uid://b25xtwhs2csqi" path="res://Scenes/movable_box.tscn" id="6_jywle"]
[ext_resource type="PackedScene" uid="uid://c2v52suxx5jrp" path="res://Scenes/Towers/ballista_tower.tscn" id="7_l1hk4"]
[ext_resource type="PackedScene" uid="uid://dm8wart2qijrc" path="res://Scenes/box.tscn" id="8_6a7cf"]
[ext_resource type="SpriteFrames" uid="uid://brjodx7c5pirw" path="res://Assets/Resources/bottle_sprite_frames.tres" id="8_b2fon"]
[ext_resource type="Script" uid="uid://ckq4offqa3gw8" path="res://Scripts/wind_bottle.gd" id="9_jydn8"]
[ext_resource type="PackedScene" uid="uid://cvyicx01sm07a" path="res://Scenes/level_menu.tscn" id="10_eqosv"]
[ext_resource type="PackedScene" uid="uid://lvc3cohw20il" path="res://Scenes/enemy_spawner.tscn" id="10_pwvbg"]
[ext_resource type="Script" uid="uid://bvjbq0juon6qg" path="res://Scripts/spawn_entry.gd" id="11_bngq1"]
[ext_resource type="PackedScene" uid="uid://q6a5e0rxses2" path="res://Scenes/loss_screen.tscn" id="12_56d2c"]
[ext_resource type="PackedScene" uid="uid://4xl7mw440pyc" path="res://Scenes/Enemies/normal_enemy.tscn" id="12_t6y87"]
[ext_resource type="PackedScene" uid="uid://sx0w03itiw5k" path="res://Scenes/win_screen.tscn" id="13_jywle"]
[ext_resource type="PackedScene" uid="uid://uk4xl3k6nbqj" path="res://Scenes/Enemies/heavy_enemy.tscn" id="13_keokt"]
[ext_resource type="PackedScene" uid="uid://j1ftmn1hkutc" path="res://Scenes/goal.tscn" id="14_cvw5d"]
[ext_resource type="PackedScene" uid="uid://1h0e0dpux851" path="res://Scenes/Levels/level3.tscn" id="14_jywle"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ud172"]
vertices = PackedVector2Array(1313.5234, 535, 1315.5625, 535, 1315.3906, 538.53125, 1251, 537.52344, 1311, 471.2422, 1311, 470.4375, 1314.5313, 470.60156, 1123, 538.7578, 1055, 471.2422, 1055, 470.22656, 1183, 471.2422, 1251, 539.7578, 1183, 470.22656, 1891, 23, 1891, 539.7578, 1763, 538.7578, 1695, 91, 1763, 539.7578, 1695, 539.22656, 1123, 539.7578, 995, 538.7578, 995, 539.7578, 867, 538.7578, 867, 539.7578, 739, 538.7578, 739, 539.7578, 611, 538.7578, 611, 539.7578, 483, 538.7578, 483, 539.7578, 415, 539.22656, 415, 23, 867, 91, 867, 469.77344, 1096.8125, 223, 1064.3828, 214.3125, 1183, 215.24219, 1125, 223, 1567, 215.24219, 1567, 214.4375, 1570.5313, 214.60156, 1569.5234, 279, 1183, 214.22656, 1311, 215.24219, 1311, 214.22656, 1439, 215.24219, 1439, 214.22656, 1506, 471.9375, 1439, 347, 1571.7578, 279, 1570.7578, 407, 1561.5313, 486.8203, 1571.7578, 407, 1571.1328, 488, 1562.7109, 488, 1449.2891, 488, 1439, 488, 1450.4688, 486.8203, 1125, 347, 1125, 318.8125, 1134.0625, 285, 1125, 251.17969, 990.60156, 215.46094, 1053.6016, 216.45313, 1029.1875, 223, 1001, 223, 991.2422, 219, 990.4375, 219, 1001, 318.8125, 1001, 347, 990.2422, 347, 991.9375, 285, 1001, 251.17969, 1061.6875, 214.28125, 1055, 216.07813, 1055, 214.22656, 1603.6875, 680, 1603.2969, 663, 1891, 663, 1891, 1112.2578, 1006, 912.1797, 996.9375, 946, 488.2422, 961, 486.77344, 773.46094, 1006, 884, 31, 1117.7109, 31, 1110.2266, 159, 1111.2422, 287, 1111.2422, 159, 1110.2266, 287, 1110.2266, 415, 1111.2422, 415, 1110.2266, 543, 1111.2422, 543, 1110.2266, 671, 1111.2422, 671, 1110.2266, 799, 1111.2422, 799, 1110.2266, 927, 1111.2422, 927, 1110.2266, 1055, 1111.2422, 1055, 1110.2266, 1183, 1111.2422, 1183, 1110.2266, 1311, 1111.2422, 290.7578, 151, 291.7578, 151, 290.7578, 279, 31, 987, 291.7578, 279, 290.7578, 407, 291.7578, 407, 290.7578, 535, 291.7578, 535, 290.7578, 663, 31, 23, 291.7578, 23, 299, 770.53125, 1410, 663, 1410, 680, 1311, 1109, 1439, 1109, 1558.4688, 680, 1439, 987, 1506, 694.0625, 1130, 987, 1130, 979.8125, 1139.0625, 946, 1453.5313, 680, 1006, 979.8125, 1006, 987, 299, 961, 1034.1875, 884, 1068, 874.9375, 1101.8125, 884, 1130, 884, 1130, 912.1797)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 0), PackedInt32Array(7, 8, 9, 10, 3, 11), PackedInt32Array(3, 10, 12, 4, 0), PackedInt32Array(13, 14, 15, 16), PackedInt32Array(15, 17, 18, 16), PackedInt32Array(7, 19, 20, 8), PackedInt32Array(20, 21, 22), PackedInt32Array(22, 23, 24), PackedInt32Array(24, 25, 26), PackedInt32Array(26, 27, 28), PackedInt32Array(28, 29, 30), PackedInt32Array(31, 13, 16, 32), PackedInt32Array(28, 30, 31, 32, 33), PackedInt32Array(26, 28, 33), PackedInt32Array(24, 26, 33), PackedInt32Array(22, 24, 33, 8), PackedInt32Array(20, 22, 8), PackedInt32Array(34, 35, 36, 37), PackedInt32Array(38, 39, 40, 41), PackedInt32Array(36, 42, 43), PackedInt32Array(43, 44, 45), PackedInt32Array(45, 46, 38, 41), PackedInt32Array(47, 48, 41, 49, 50, 51), PackedInt32Array(50, 52, 53, 54, 51), PackedInt32Array(55, 56, 48, 57), PackedInt32Array(47, 57, 48), PackedInt32Array(48, 58, 59, 60, 43, 45, 41), PackedInt32Array(37, 36, 43, 60, 61), PackedInt32Array(62, 63, 64, 65, 66), PackedInt32Array(66, 67, 62), PackedInt32Array(68, 69, 70, 71), PackedInt32Array(66, 65, 72, 71), PackedInt32Array(71, 70, 66), PackedInt32Array(73, 74, 75), PackedInt32Array(76, 77, 78, 79), PackedInt32Array(80, 81, 82, 83, 84), PackedInt32Array(85, 86, 87), PackedInt32Array(79, 85, 87, 88), PackedInt32Array(87, 89, 88), PackedInt32Array(88, 90, 91), PackedInt32Array(79, 88, 91), PackedInt32Array(91, 92, 93), PackedInt32Array(79, 91, 93), PackedInt32Array(93, 94, 95), PackedInt32Array(79, 93, 95), PackedInt32Array(95, 96, 97), PackedInt32Array(79, 95, 97), PackedInt32Array(97, 98, 99), PackedInt32Array(79, 97, 99), PackedInt32Array(99, 100, 101), PackedInt32Array(79, 99, 101), PackedInt32Array(101, 102, 103), PackedInt32Array(79, 101, 103), PackedInt32Array(103, 104, 105), PackedInt32Array(79, 103, 105), PackedInt32Array(106, 107, 108, 109), PackedInt32Array(108, 110, 111, 109), PackedInt32Array(111, 112, 113, 109), PackedInt32Array(113, 114, 115, 109), PackedInt32Array(116, 117, 106, 109), PackedInt32Array(118, 115, 119, 120, 83), PackedInt32Array(105, 121, 122, 79), PackedInt32Array(123, 76, 79, 122, 124, 125), PackedInt32Array(124, 126, 127, 128, 120, 129, 125), PackedInt32Array(81, 130, 131, 109, 82), PackedInt32Array(132, 82, 109), PackedInt32Array(132, 109, 115, 118), PackedInt32Array(133, 84, 83, 120, 134), PackedInt32Array(135, 134, 120, 136), PackedInt32Array(136, 120, 128, 137)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1973, -65, 1984, 1142, -65, 1148, -64, -73)])
agent_radius = 30.0

[sub_resource type="Resource" id="Resource_xqoth"]
script = ExtResource("11_bngq1")
scene = ExtResource("12_t6y87")
count = 5
spawn_rate = 2.0
metadata/_custom_type_script = "uid://bvjbq0juon6qg"

[sub_resource type="Resource" id="Resource_nqasx"]
script = ExtResource("11_bngq1")
scene = ExtResource("12_t6y87")
count = 3
metadata/_custom_type_script = "uid://bvjbq0juon6qg"

[sub_resource type="Resource" id="Resource_yxf76"]
script = ExtResource("11_bngq1")
scene = ExtResource("13_keokt")
count = 2
spawn_rate = 5.0
metadata/_custom_type_script = "uid://bvjbq0juon6qg"

[sub_resource type="Resource" id="Resource_t27xo"]
script = ExtResource("11_bngq1")
scene = ExtResource("12_t6y87")
count = 4
spawn_rate = 1.5
metadata/_custom_type_script = "uid://bvjbq0juon6qg"

[node name="level2" type="Node2D" unique_id=179991829 node_paths=PackedStringArray("spawners")]
script = ExtResource("1_0jhw5")
spawners = [NodePath("EnemySpawner")]

[node name="GroundLayer" type="TileMapLayer" parent="." unique_id=1395427363]
z_index = -2
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAgAAAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAgAAAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAA=")
tile_set = ExtResource("2_eqosv")

[node name="WindController" parent="." unique_id=1545098080 instance=ExtResource("3_6a7cf")]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." unique_id=1302352236]
position = Vector2(-1, 7)
navigation_polygon = SubResource("NavigationPolygon_ud172")
script = ExtResource("4_hpjhc")

[node name="WallLayer" type="TileMapLayer" parent="NavigationRegion2D" unique_id=1728259221]
position = Vector2(1, -7)
tile_map_data = PackedByteArray("AAD/////BQABAAAAADAAAP//BQABAAAAADABAP//BQABAAAAADACAP//BQABAAAAADADAP//BQABAAAAADAEAP//BQABAAAAADAFAP//BQABAAAAADAGAP//BQABAAAAADAHAP//BQABAAAAADAIAP//BQABAAAAADAJAP//BQABAAAAADALAP//BQABAAAAADAMAP//BQABAAAAADANAP//BQABAAAAADAOAP//BQABAAAAADAPAP//BQABAAAAADAPAAAABQABAAAAAGAPAAEABQABAAAAAGAPAAIABQABAAAAAGAPAAMABQABAAAAAGAPAAQABQABAAAAAGAPAAUABQABAAAAAGAPAAYABQABAAAAAGAPAAcABQABAAAAAGAPAAgABQABAAAAAGD//wgABQABAAAAAFAAAAgABQADAAAAAAABAAgABQADAAAAAAACAAgABQADAAAAAAADAAgABQADAAAAAAAEAAgABQADAAAAAAAFAAgABQADAAAAAAAGAAgABQADAAAAAAAHAAgABQADAAAAAAAIAAgABQADAAAAAAAJAAgABQADAAAAAAAKAAgABQABAAAAAAD//wMABQABAAAAAFD//wQABQABAAAAAFD//wUABQABAAAAAFD//wYABQABAAAAAFD//wcABQABAAAAAFD//wAABQABAAAAAFD//wEABQABAAAAAFD//wIABQABAAAAAFAKAP//BQADAAAAADACAAAABQADAAAAAFACAAEABQADAAAAAFACAAIABQADAAAAAFACAAMABQADAAAAAFACAAQABQADAAAAAFADAAQABQADAAAAADAEAAQABQADAAAAADAFAAQABQADAAAAADAGAAQABQADAAAAADAHAAQABQADAAAAADAIAAQABQADAAAAADAJAAQABQADAAAAADAKAAQABQACAAAAADANAAQABQADAAAAADAOAAQABQADAAAAADAKAAMABQACAAAAAFAMAAEABQACAAAAAFAMAAIABQADAAAAAFAMAAMABQADAAAAAFAMAAQABQADAAAAAFALAAEABQADAAAAAAAKAAEABQADAAAAAAAJAAEABQADAAAAAAAIAAEABQADAAAAAAAJAAMABQADAAAAAAAIAAMABQADAAAAAAAHAAMABQADAAAAAAAHAAEABQACAAAAAAAHAAIABQADAAAAAGA=")
tile_set = ExtResource("5_56d2c")

[node name="RebakeTimer" type="Timer" parent="NavigationRegion2D" unique_id=344249157]
wait_time = 3.0
one_shot = true

[node name="MovableBox2" parent="NavigationRegion2D" unique_id=1673245718 instance=ExtResource("6_jywle")]
position = Vector2(1506, 583)

[node name="BallistaTower" parent="NavigationRegion2D" unique_id=1845065025 instance=ExtResource("7_l1hk4")]
position = Vector2(1063, 285)

[node name="BallistaTower2" parent="NavigationRegion2D" unique_id=1180314890 instance=ExtResource("7_l1hk4")]
position = Vector2(1068, 946)

[node name="Box" parent="NavigationRegion2D" unique_id=1615796132 instance=ExtResource("8_6a7cf")]
position = Vector2(393, 866)

[node name="UI" type="CanvasLayer" parent="." unique_id=1466918898]

[node name="LevelMenu" parent="UI" unique_id=2140832043 instance=ExtResource("10_eqosv")]
visible = false

[node name="LossScreen" parent="UI" unique_id=1886424522 instance=ExtResource("12_56d2c")]
visible = false

[node name="WinScreen" parent="UI" unique_id=180070478 instance=ExtResource("13_jywle")]
visible = false
next_level = ExtResource("14_jywle")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI" unique_id=787718774]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -86.0
offset_right = 20.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0

[node name="WindBottle" type="AnimatedSprite2D" parent="UI/AspectRatioContainer" unique_id=120836652]
sprite_frames = ExtResource("8_b2fon")
animation = &"3"
speed_scale = 2.0
script = ExtResource("9_jydn8")

[node name="Panel" type="Panel" parent="UI/AspectRatioContainer/WindBottle" unique_id=1595649363]
show_behind_parent = true
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = 80.0

[node name="EnemySpawner" parent="." unique_id=462682666 instance=ExtResource("10_pwvbg")]
position = Vector2(150, 191)
to_spawn = Array[ExtResource("11_bngq1")]([SubResource("Resource_xqoth"), SubResource("Resource_nqasx"), SubResource("Resource_yxf76"), SubResource("Resource_t27xo")])

[node name="Goal" parent="." unique_id=967983182 instance=ExtResource("14_cvw5d")]
position = Vector2(1751, 900)

[connection signal="timeout" from="NavigationRegion2D/RebakeTimer" to="NavigationRegion2D" method="_on_rebake_timer_timeout"]
